Convolutional Neural Network bir network tasarımı oluşturulmuştur. Model  Cifar-10 veri kümesi ile eğitilmiştir. İstenen adımlar case içerisinde belirtilmiş olup bu adımlar çalışmada uygulanmıştır.

--- a/Network_Karsilastirma2.ipynb
+++ b/Network_Karsilastirma2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOrnEQVNhvcBUP0z++6uS1S",
+      "authorship_tag": "ABX9TyN19R+uzIDVAp44/pxeE846",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,17 +184,17 @@
         "# Giriş katmanı (Flatten - görüntüyü düzleştirir)\n",
         "model.add(layers.Flatten(input_shape=(32, 32, 3)))\n",
         "\n",
-        "# İlk fully connected hidden layer + Dropout\n",
+        "# İlk fully connected hidden layer\n",
         "model.add(layers.Dense(128, activation='relu', kernel_regularizer=regularizers.l2(0.0001)))\n",
         "\n",
         "\n",
-        "# İkinci fully connected hidden layer + Dropout\n",
+        "# İkinci fully connected hidden layer\n",
         "model.add(layers.Dense(128, activation='relu', kernel_regularizer=regularizers.l2(0.0001)))\n",
         "\n",
-        "# Üçüncü fully connected hidden layer + Dropout\n",
+        "# Üçüncü fully connected hidden layer\n",
         "model.add(layers.Dense(64, activation='relu', kernel_regularizer=regularizers.l2(0.0001)))\n",
         "\n",
-        "# Dördüncü fully connected hidden layer + Dropout\n",
+        "# Dördüncü fully connected hidden layer\n",
         "model.add(layers.Dense(64, activation='relu', kernel_regularizer=regularizers.l2(0.0001)))\n",
         "\n",
         "#Besinci fully connected hidden layer + Dropout\n",
